No se mostraba el codigo del sitio en el formulario

--- a/language/template.static.pot
+++ b/language/template.static.pot
@@ -6,8 +6,13 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 
 msgid "Ficha"
-msgstr "Itemsito"
+msgstr "Itemsitoaaa"
 
 msgid "Advanced search"
-msgstr "Itemsito"
+msgstr "Itaemsito"
 
+msgid "Search results for"
+msgstr "Suchergebnisse für"
+
+msgid "No result found"
+msgstr "Keine Einträge gefunden"
