--- a/language/es.po
+++ b/language/es.po
@@ -38,3 +38,7 @@ msgid ""
 msgstr "ID de seguimiento de Google Analytics para todos los sitios, a menos que se especifique lo contrario en configuraciones del sitio"
 
 
+msgid "title"
+msgstr "ID"
+
+
